# data_analyze_study

./: .gitignore  LICENSE  Makefile  README.md  app.py  cleam_chtables.py  clickhouse_schema.md  config_risk.yaml  cross_validation.py  data_table.csv  debug_columns.txt  debug_columns0.txt  demo.py  export_schema.py  feature_calculator_example.py  fill_stat_id_for_existing_rows.py  hour_average.csv  llm_client.py  manage_clickhouse_tables.py  mcp_server.py  metrics.yaml  preview_table.py  pyproject.toml  requirements.txt  run_features_cal.py  run_hourly_features.py  run_import.py  run_import_excel_batch.py  run_import_raw.py  run_interpolation.py  run_llm_agent.py  run_prepare_test_data.py  run_preprocessing.py  run_query.py  run_risk_features.py  run_statistical_features_example.py  run_time_series_analysis.py  run_ts_analysis.py  run_upload_excel.py  run_validation.py  (+5 more)
.git_backup/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
dataloader/: data_config.yaml  data_config_simple .yaml  fetch_multi_table.py
docs/: index.md
notebooks/: test.ipynb  (+2 more)
ts_fe/: pyproject.toml  requirements.txt  run_fft_on_window.py  run_hourly_features.py  run_pipeline.py  run_validation.py  run_validation_auto.py
ts_fe/docs/docs/: index.md
ts_fe/notebooks/task1/: test.py
ts_fe/notebooks/task3/: 1caculate_hourly_statist.py  2.1calculate_daily_volatility.py.py  analyze_periodicity_test.py
ts_fe/notebooks/task3/done/: 1caculate_hourly0.py  import_csv.py  validate_data.py
ts_fe/src/: config.py  dataset.py  features.py  plots.py  validation.py
ts_fe/src/data/: make_dataset.py
(+84 files in other folders)
